<resources>
    <string name="app_name">ToolBoxRida</string>
    <string name="main_title">Gisney World Theme Park</string>
    <string name="sub_title">where all your dreams come true!
    (some restrictions apply)</string>
    <string name="att_title">take a look at our VERY real and VERY safe variety of attractions that guaruntee full fun for the family!</string>
    <string name="harry_paragraph">Enter the magical world of Harry Potter with fake dragons and lots of little kids with wands. Also the price of the costume is more than the ticket.</string>
    <string name="pirate_title">Pirates of Carribean</string>
    <string name="pirate_para">We think. We actually don\'t know. But it has a ship. So expect pirates and a missing wallet.</string>
    <string name="first_button">Next Page</string>
    <string name="cind_title">Cinderellah\'s Castle</string>
    <string name="cind_para">Take a stroll through Cinderellah\'s castle which has been always um yellow by the way.</string>
    <string name="golly_title">Gollywood</string>
    <string name="golly_para">Explore the center of fame through Gollywood by meeting all your favorite actors that are just pretending to be your favorite actors! Also that doesn\'t say Hollywood haha..                                                                  </string>

    <string name="checkBox1">Random Musical Hotel</string>
    <string name="checkBox2">Donald Duck Clubhouse</string>
    <string name="checkBox3">I do not want to stay in a hotel</string>

    <string name="radioButton1">Obligatory Harry Potter Ride</string>
    <string name="radioButton2">Pirates of the Carribean</string>
    <string name="radioButton3">Cinderellah\'s Castle</string>
    <string name="radioButton4">Gollywood</string>


    <string name="ppl_tickets"># of tickets</string>

    <string-array name="ppl_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
